--- a/view/RQ1.1-resources.html
+++ b/view/RQ1.1-resources.html
@@ -167,7 +167,7 @@
 			</tbody>
 		</table>
 		
-		<a href="index.html" class="btn btn-warning">Return to index</a>
+		<a href="../index.html" class="btn btn-warning">Return to index</a>
 		<a href="reference.html" class="btn btn-warning">See references</a>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
