--- a/view/references.html
+++ b/view/references.html
@@ -397,6 +397,39 @@ p.infolinks { margin: 0.3em 0em 0em 0em; padding: 0px; }
 }
 </style>
 </head>
+
+<!-- navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarNav">
+		<ul class="navbar-nav">
+			<li class="nav-item ">
+				<a class="nav-link" href="../index.html">Index <span class="sr-only">(current)</span></a>
+			</li>
+			<li class="nav-item ">
+				<a class="nav-link" title="RQ1 - summarizes the current understandings to define what are exactly sustainable software systems" href="RQ1-understandings.html">Understandings</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" title="RQ2 - summarizes the resources taken into account when considering sustainability in software systems" href="RQ2-resources.html">Resources</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" title="RQ3 - Summarizes the critical factors that hamper or contribute for developing sustainable software" href="RQ3-criticalfactors.html">Critical Factors</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" title="RQ4.1 - summarizes approaches mentioned in recent literature to achieve sustainable software" href="RQ4.1-approaches.html">Approaches</a>
+			</li>
+			<li class="nav-item active">
+				<a class="nav-link" title="RQ4.2 - summarizes guidelines to achieve sustainable software" href="RQ4.2-guidelines.html">Guidelines</a>
+			</li>
+			<li class="nav-item ">
+				<a class="nav-link" title="See the full list of references" href="references.html">References</a>
+			</li>
+			
+		</ul>
+	</div>
+</nav>
 <body>
 
 	<form action="" id="quicksearch">
