--- a/view/RQ1-understandings.html
+++ b/view/RQ1-understandings.html
@@ -51,7 +51,7 @@
 
   <body>
     <div class="container">
-      <h1 class="jumbotron" style="text-align:center">Sustainable Software Systems: The Core Characteristics and Their Achievement</h1>
+      <h1 class="jumbotron" style="text-align:center; margin-top:2em">Sustainable Software Systems: The Core Characteristics and Their Achievement</h1>
       <div style="margin-top:3em; margin-bottom: 3em;">
         <div>To define what is exactly what sustainable software is, we gathered from the literature the following text passages that somehow define the main characteristics of sustainable software. The passages show the current comprehension in software engineering about sustainable software considering the multiple dimensions involved (environmental, social, economic, technical, and individual). </div>
       </div>
