--- a/view/RQ4.1-approaches.html
+++ b/view/RQ4.1-approaches.html
@@ -53,7 +53,7 @@
 	<body>
 
 		<div class="container">
-			<h1 class="jumbotron" style="text-align:center">Sustainable Software Systems: The Core Characteristics and Their Achievement</h1>
+			<h1 class="jumbotron" style="text-align:center; margin-top:2em">Sustainable Software Systems: The Core Characteristics and Their Achievement</h1>
 			<div style="margin-top:3em; margin-bottom: 3em;">
 				<div>Sustainability for software systems started to be discussed in 2009 in <a href="https://www.cs.uoregon.edu/events/icse2009/specialSessions/#planet"> ICSE special session for the plannet </a>. Despite this topic is considered relatively new in software engineering the community already proposed many approaches to achieve sustainability. Thus, we provide below a table of 98 approaches mentioned in literature as means to leverage sustainability in software systems.</div>
 
