--- a/view/RQ4.2-guidelines.html
+++ b/view/RQ4.2-guidelines.html
@@ -55,7 +55,7 @@
 </nav>
 <body>
 	<div class="container">
-		<h1 class="jumbotron" style="text-align:center">Sustainable Software Systems: The Core Characteristics and Their Achievement</h1>
+		<h1 class="jumbotron" style="text-align:center; margin-top:2em">Sustainable Software Systems: The Core Characteristics and Their Achievement</h1>
 		<div style="margin-top:3em; margin-bottom: 3em;">
 			<div>Guidelines for creating sustainable software systems were presented in the last years to aid developers to achieve sustainability goals. Most of the guidelines are stated as a result of an experimental study, or even as lessons learned, thus, secondary studies are an important tool to summarize these guidelines and present them to the community. Our study surveyed the literature to gather the guidelines presented in this area and we present these results in the table below. </div>
 
