--- a/view/RQ2-resources.html
+++ b/view/RQ2-resources.html
@@ -52,12 +52,11 @@
 
 	<body>
 		<div class="container">
-			<h1 class="jumbotron" style="text-align:center; margin-top:2em">Sustainable Software Systems: The Core Characteristics and Their Achievement</h1>
-			<div style="margin-top:3em; margin-bottom: 3em;">
-				<div>Software development is essentially an intellectual task that depends essentially on human skills. However, it is not clear which kind of resources are consumed while the software is developed and what are the impacts of this resource consumption in society, economy, environment. Therefore, we surveyed the literature and present text passages below that present evidence about which are the resources consumed that are taken into account when considering sustainability in software systems. </div>
+			<h1 class="jumbotron jumbotron-fluid display-4" style="font-size: 2.5em;text-align:center; margin-top:2.5em"> Sustainable Software Systems: The Core Characteristics and Their Achievement</h1>
+				<div>Software development is essentially an intellectual task that depends essentially on human skills. However, it is not clear which kind of resources are consumed while the software is developed and what are the impacts of this resource consumption in society, economy, environment. Therefore, we surveyed the literature and present text passages below that present evidence about which are the resources consumed that are taken into account when considering sustainability in software systems.
 			</div>
 
-			<div class="accordion" style="margin-bottom: 2em;" id="accordion">
+			<div class="accordion" style="margin-top: 2em; margin-bottom: 2em;" id="accordion">
 				<div class="card">
 					<div class="card-header" id="headingOne" style="background-color: #efefef;">
 						<h2 class="mb-0">
