--- a/view/RQ3-criticalfactors.html
+++ b/view/RQ3-criticalfactors.html
@@ -50,9 +50,8 @@
 	</nav>
 	<body>
 		<div class="container">
-			<h1 class="jumbotron" style="text-align:center; margin-top:2em">Sustainable Software Systems: The Core Characteristics and Their Achievement</h1>
-			<div style="margin-top:3em; margin-bottom: 3em;">
-				<div>Sustainable software is fully aligned with the sustainability goals, thus, to develop sustainable systems it is necessary to understand the factors that hamper or contribute to sustainability. Table below provides a complete list of text passages and the factors that are considered critical for sustainable software systems.</div>
+			<h1 class="jumbotron jumbotron-fluid display-4" style="font-size: 2.5em;text-align:center; margin-top:2.5em"> Sustainable Software Systems: The Core Characteristics and Their Achievement</h1>
+				<div style="margin-bottom: 2em;">Sustainable software is fully aligned with the sustainability goals, thus, to develop sustainable systems it is necessary to understand the factors that hamper or contribute to sustainability. Table below provides a complete list of text passages and the factors that are considered critical for sustainable software systems.
 			</div>
 			<table class="table table-bordered table-hover table-striped" style="text-align: center;">
 				<thead class="thead-dark">
