--- a/view/RQ1-understandings.html
+++ b/view/RQ1-understandings.html
@@ -272,7 +272,7 @@
 
 
     <div style="margin-top:3em; margin-bottom: 3em;">
-      <div>Observing the text passages, we can observe some similarities and characteristics that are mentioned several times in studies. Therefore, we created a new table to summarize these text passages and group the text passages which are similar, and applied <a href="https://ieeexplore.ieee.org/document/6092576"> thematic analysis </a> to better understand what is exactly sustainable software. </div>
+      <div>Observing the text passages, some similarities and characteristics are mentioned several times in studies and can be summarized. Therefore, we created a new table and group the text passages which are similar, and applied <a href="https://ieeexplore.ieee.org/document/6092576"> thematic analysis </a> to better understand what is exactly sustainable software. </div>
     </div>
 
     <table class="table table-bordered table-hover table-striped" style="text-align: left;">
